[package]
name = "packets"
version = "0.1.0"
authors = ["Silas Nordgren <nordgrensilas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
incremental = true

[profile.dev.package."*"]
opt-level = 2

[dependencies]
anyhow = "1.0.34"
bincode = "1.3.1"
byteorder = "1.3.4"
serde = { version = "1.0.117", features = ["derive"] }
socket2 = { version = "0.3.16" }
